added Null-Space Joint Damping to Dynamic Reconfigure

--- a/config/TaskSpaceParams.cfg
+++ b/config/TaskSpaceParams.cfg
@@ -40,6 +40,15 @@ kd.add("d_roll", double_t, 0, "Damping Gain for Rotation about X",    20, 1,   6
 kd.add("d_pitch", double_t, 0, "Damping Gain for Rotation about Y",   20, 1,   60)
 kd.add("d_yaw", double_t, 0, "Damping Gain for Rotation about Z",     20, 1,   60)
 
+kqd = gen.add_group("Kqd") # Null-Space joint damping gain
+kqd.add("qd_0", double_t, 0, "Joint 0 Null-Space Joint Damping", 4, 2, 10)
+kqd.add("qd_1", double_t, 0, "Joint 1 Null-Space Joint Damping", 4, 2, 10)
+kqd.add("qd_2", double_t, 0, "Joint 2 Null-Space Joint Damping", 4, 2, 10)
+kqd.add("qd_3", double_t, 0, "Joint 3 Null-Space Joint Damping", 4, 2, 10)
+kqd.add("qd_4", double_t, 0, "Joint 4 Null-Space Joint Damping", 3, 1.5, 10)
+kqd.add("qd_5", double_t, 0, "Joint 5 Null-Space Joint Damping", 3, 1.5, 10)
+kqd.add("qd_6", double_t, 0, "Joint 6 Null-Space Joint Damping", 3, 1.5, 10)
+
 l = gen.add_group("L") # friction observer proportional gain
 l.add("l_0", double_t, 0, "Friction observer propotional gain for joint 0",    75, 20,   200)
 l.add("l_1", double_t, 0, "Friction observer propotional gain for joint 1",    75, 20,   200)
